更改了音乐位置，创建了MusicPlay类内的静态方法，采用多线程的方式进行音乐播放

--- a/DesktopToys/DesktopToys.vcxproj.filters
+++ b/DesktopToys/DesktopToys.vcxproj.filters
@@ -170,7 +170,7 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <Media Include="music1.mp3">
+    <Media Include="music\ninjamusic.mp3">
       <Filter>资源文件</Filter>
     </Media>
   </ItemGroup>
