--- a/DesktopToys/DesktopToys.vcxproj
+++ b/DesktopToys/DesktopToys.vcxproj
@@ -253,7 +253,7 @@
     <Image Include="res\DesktopToys.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="music1.mp3" />
+    <Media Include="music\ninjamusic.mp3" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
